--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,109 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
-/*debug*/
+/* inizio header*/
 
 header{
     width: 100%;
     height: 70px;
-    background-color: red;
+    background-color:blue;
+    padding: 0 100px;
+    position: relative;
 }
 
+#logo{
+    vertical-align: middle;
+    position: relative;
+    top: 15px;
+}
+
+nav ul{
+    text-align: center;
+    position: relative;
+    bottom: 10px;
+    
+}
+
+nav ul li{
+    display: inline-block;
+    margin-right: 20px;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color: white;
+}
+
+header h3{
+    position: absolute;
+    right: 100px;
+    top: 25px;
+    background-color: white;
+    border-radius: 15px;
+    padding: 5px;
+}
+
+header h3 a{
+    text-decoration: none;
+    color: black;
+}
+
+li:hover a{
+    border-bottom: 1px solid white;
+}
+
+/* fine header*/
+ 
+/* inizio jambotrom*/
 .jambotrom{
     width: 100%;
     height: 500px;
-    background-color: blue;
+    background-color:red;
 }
+
+.button1{
+    margin: 10px 0;
+}
+
+#freccia{
+    margin-right: 5px;
+}
+
+.button1, .button2{
+    display: inline-block;
+}
+
+.button1 a,.button2 a{
+    padding: 10px;
+    border-radius: 15px;
+    text-decoration: none;
+}
+
+.button1 a{
+    background-color: white;
+    color: black;
+}
+
+.button1:hover a{
+    box-shadow: 4px 4px 8px lightgray;
+}
+
+.button2{
+    margin: 25px 0;
+}
+
+.button2 a{
+    background-color: black;
+    color: white;
+}
+
+.button2:hover a{
+    box-shadow: 4px 4px 8px lightgray;
+}
+
+/* fine jambotrom*/
 
 .conteiner{
     width: 100%;
